[package]
name = "bench"
version = "0.1.0"
authors = ["bai <nkbai@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log="0.4"
env_logger="0.7"
serde="1.0"
serde_json="1.0"
serde_derive = "1.0"
tokio = { version = "0.2.0", path = "../../tokio", features = ["full"] } #{ version = "0.2",  features = ["full"] }
tokio-util ={ version = "0.2.0", path = "../../tokio-util", features = ["full"] } #{ version = "0.2",  features = ["full"] } #
rand="0.7"
bitflags="1.0"
lazy_static="1.0"
get_if_addrs="0.5"
futures = { version = "0.3.0", features = ["async-await"] }
bytes="0.5"
csv="1.1"
structopt="0.3"
client={version="0.1",path="../client"}
async-wg="0.1"
futures-util = "0.3.3"